cmake_minimum_required(VERSION 3.22)

project(ee205_lab_08d_animal_farm_1_to_clion)

set(CMAKE_CXX_STANDARD 14)

add_executable(ee205_lab_08d_animal_farm_1_to_clion main.cpp Cat.cpp Cat.h Color.h Animal.cpp Animal.h Gender.h Node.h Mammal.cpp Mammal.h Weight.cpp Weight.h SinglyLinkedList.cpp SinglyLinkedList.h List.h " List.cpp" List.cpp)
